feat: add bsae crud for truck, pelabuhan, stockpile, tambang endpoint
