# models/pelabuhan.js
@@ -18,10 +18,6 @@ const PelabuhanSchema = new Schema({
         type: String,
         required: true
     },
-    jumlah_layer: {
-        type: Number,
-        required: true
-    },
     is_active: {
         type: Boolean,
         required: true,
